<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/successmassage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/estampt"
        android:layout_margin="30dp"
        android:text="@string/successmassgae"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/oderid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/printcoderno"
        android:textSize="40sp"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successmassage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/callingmassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/material_dynamic_primary60"
        android:textStyle="bold"
        android:text="@string/callingmassge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oderid"
        app:layout_constraintVertical_bias="0.012" />


</androidx.constraintlayout.widget.ConstraintLayout>